--- a/css/main.css
+++ b/css/main.css
@@ -122,7 +122,7 @@ body {
 
 /* RSVP Style */
 .ww-rsvp-detail {
-  background: url("../images/confirma.jpg") no-repeat center center;
+  background: url("../images/confirma.JPG") no-repeat center center;
   background-size: cover;
   min-height: 100vh;
   position: relative; }
