--- a/css/main.css
+++ b/css/main.css
@@ -204,11 +204,18 @@ body {
     content: '';
     background: transparent url(../images/pattern.png) repeat top left; 
 }
-
 .cb-slideshow li:nth-child(1) span { 
   background-image: url(../images/1.jpg) 
 }
 .cb-slideshow li:nth-child(2) span { 
   background-image: url(../images/2.jpg);
   animation-delay: 6s; 
+}
+.pedido-full{
+  width: 100%;
+  height: 100%;
+}
+#pedido {
+  padding: 0px;
+  height: 100vh;
 }
