[ADD] Inclusão da chave PIX [ADD] Inclusão do plugin alertify
Signed-off-by: João Carvalho <contato.jccarvalho@hotmail.com>

--- a/css/main.css
+++ b/css/main.css
@@ -230,6 +230,9 @@ body {
   inline-size: 180px;
   font-size: 30px;
 }
+#valor-copia-pix {
+  
+}
 @media only screen and (min-width: 600px) {
   .image-evento{
     min-width: 445px;
