[MOD] Ajustando alinhamento e placeholder do campo nome na confirmação de presença.
Signed-off-by: João Carvalho <contato.jccarvalho@hotmail.com>

--- a/css/main.css
+++ b/css/main.css
@@ -126,14 +126,6 @@ body {
   background-size: cover;
   min-height: 100vh;
   position: relative; }
-  .ww-rsvp-detail .ww-rsvp-form {
-    padding-left: 20%; }
-    @media (max-width: 768px) {
-      .ww-rsvp-detail .ww-rsvp-form {
-        padding-left: 10%; } }
-    @media (max-width: 576px) {
-      .ww-rsvp-detail .ww-rsvp-form {
-        padding-left: 0%; } }
     .ww-rsvp-detail .ww-rsvp-form .form-control {
       background-color: rgba(222, 222, 222, 0.2);
       color: #fff;
@@ -229,6 +221,10 @@ body {
   line-height: 45px;
   inline-size: 180px;
   font-size: 30px;
+}
+
+.div-center {
+  margin: auto;
 }
 
 
